# openapi-fixed.json
@@ -53,7 +53,8 @@
         "operationId": "PostalCode_serviceability",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
+            "OAuth2ClientCredentialsBearer": [
+              "postal-codes:read"
             ]
           }
         ],
@@ -111,7 +112,8 @@
         "operationId": "Lead_create",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
+            "OAuth2ClientCredentialsBearer": [
+              "leads:create"
             ]
           }
         ],
@@ -156,7 +158,8 @@
         "operationId": "Lead_list",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
+            "OAuth2ClientCredentialsBearer": [
+              "leads:read"
             ]
           }
         ],
@@ -206,7 +209,8 @@
         "operationId": "Lead_get",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
+            "OAuth2ClientCredentialsBearer": [
+              "leads:read"
             ]
           }
         ],
@@ -252,7 +256,8 @@
         "operationId": "Lead_delete",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
+            "OAuth2ClientCredentialsBearer": [
+              "leads:delete"
             ]
           }
         ],
@@ -291,7 +296,8 @@
         "operationId": "Lead_update",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
+            "OAuth2ClientCredentialsBearer": [
+              "leads:update"
             ]
           }
         ],
@@ -350,7 +356,8 @@
         "operationId": "Quote_get",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
+            "OAuth2ClientCredentialsBearer": [
+              "quotes:read"
             ]
           }
         ],
@@ -401,8 +408,8 @@
         "operationId": "Quote_create",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
-              "create:quotes"
+            "OAuth2ClientCredentialsBearer": [
+              "quotes:create"
             ]
           }
         ],
@@ -506,8 +513,8 @@
         "operationId": "QuoteServiceGroup_create",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
-              "create:quotes"
+            "OAuth2ClientCredentialsBearer": [
+              "quotes:update"
             ]
           }
         ],
@@ -582,11 +589,11 @@
           "QuoteServiceGroup"
         ],
         "summary": "Change Locations On Service Group",
-        "operationId": "QuoteServiceGroups_changeLocations",
+        "operationId": "QuoteServiceGroup_changeLocations",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
-              "create:quotes"
+            "OAuth2ClientCredentialsBearer": [
+              "quotes:update"
             ]
           }
         ],
@@ -616,8 +623,8 @@
                   "summary": "Change locations",
                   "description": "Change locations on a service group",
                   "value": [
-                    "1a99a4ff641f4040afb2f4f72fe377cc",
-                    "bb2078b5d93f44c0a98f268d86540450"
+                    "7fec6c0eeb4a44f290b24edb3abe4b9b",
+                    "1b6664f3d42b4edea302a4c2dc18dbd9"
                   ]
                 }
               }
@@ -654,11 +661,11 @@
           "QuoteServiceGroup"
         ],
         "summary": "Get Service Group",
-        "operationId": "QuoteServiceGroups_get",
+        "operationId": "QuoteServiceGroup_get",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
-              "read:quotes"
+            "OAuth2ClientCredentialsBearer": [
+              "quotes:read"
             ]
           }
         ],
@@ -715,11 +722,11 @@
           "QuoteServiceGroup"
         ],
         "summary": "Delete Service Group",
-        "operationId": "QuoteServiceGroups_delete",
+        "operationId": "QuoteServiceGroup_delete",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
-              "delete:quotes"
+            "OAuth2ClientCredentialsBearer": [
+              "quotes:update"
             ]
           }
         ],
@@ -774,8 +781,8 @@
         "operationId": "QuoteServiceGroup_update",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
-              "update:quotes"
+            "OAuth2ClientCredentialsBearer": [
+              "quotes:update"
             ]
           }
         ],
@@ -816,7 +823,7 @@
                   "summary": "Replace a service group",
                   "description": "Replace a service group",
                   "value": {
-                    "flexible_quote_id": "0dd37117-3e93-4f7c-a496-8418906534e3"
+                    "flexible_quote_id": "46222dd3-a1bb-4cfc-b9cc-32607fd8502c"
                   }
                 }
               }
@@ -856,8 +863,8 @@
         "operationId": "QuoteServiceGroup_updateServices",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
-              "update:quotes"
+            "OAuth2ClientCredentialsBearer": [
+              "quotes:update"
             ]
           }
         ],
@@ -948,8 +955,8 @@
         "operationId": "QuoteServiceGroup_createFlexible",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
-              "update:quotes"
+            "OAuth2ClientCredentialsBearer": [
+              "quotes:update"
             ]
           }
         ],
@@ -1036,8 +1043,8 @@
         "operationId": "Quote_updateInventory",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
-              "update:quotes"
+            "OAuth2ClientCredentialsBearer": [
+              "quotes:update"
             ]
           }
         ],
@@ -1123,8 +1130,8 @@
         "operationId": "Quote_deleteInventory",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
-              "delete:quotes"
+            "OAuth2ClientCredentialsBearer": [
+              "quotes:update"
             ]
           }
         ],
@@ -1165,8 +1172,8 @@
         "operationId": "Quote_getInventory",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
-              "read:quotes"
+            "OAuth2ClientCredentialsBearer": [
+              "quotes:read"
             ]
           }
         ],
@@ -1216,8 +1223,8 @@
         "operationId": "QuoteServiceGroup_createEstimate",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
-              "read:quotes"
+            "OAuth2ClientCredentialsBearer": [
+              "quotes:read"
             ]
           }
         ],
@@ -1267,8 +1274,8 @@
         "operationId": "Location_create",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
-              "create:locations"
+            "OAuth2ClientCredentialsBearer": [
+              "locations:create"
             ]
           }
         ],
@@ -1331,7 +1338,8 @@
         "operationId": "Order_create",
         "security": [
           {
-            "OAuth2ImplicitBearer": [
+            "OAuth2ClientCredentialsBearer": [
+              "orders:create"
             ]
           }
         ],
@@ -1831,9 +1839,9 @@
             "description": "Start date and time of the quote",
             "type": "string",
             "format": "date-time",
-            "example": "2024-02-05T15:50:48.765645",
+            "example": "2024-02-06T20:20:06.515155",
             "x-examples": [
-              "2024-02-05T15:50:48.765645"
+              "2024-02-06T20:20:06.515155"
             ]
           },
           "service_code": {
@@ -2954,9 +2962,9 @@
             "title": "Id",
             "description": "Location ID",
             "type": "string",
-            "example": "1bcd054ca1bc48a286be06556cabd171",
+            "example": "05604653e9e94902914b233c4d1dc06e",
             "x-examples": [
-              "1bcd054ca1bc48a286be06556cabd171"
+              "05604653e9e94902914b233c4d1dc06e"
             ]
           },
           "property_type": {
@@ -3675,41 +3683,41 @@
             "type": "array",
             "example": [
               {
-                "created_at": "2024-02-05T15:50:47.449384+00:00",
-                "end_datetime": "2024-02-05T15:50:47.449396+00:00",
+                "created_at": "2024-02-06T20:20:04.631394+00:00",
+                "end_datetime": "2024-02-06T20:20:04.631400+00:00",
                 "end_timezone": "America/New_York",
                 "estimated_hours": 2.5,
                 "estimated_pricing_strategy": "HOURLY",
                 "estimated_unit_price": 10000,
                 "estimated_workers": 2,
-                "id": "06f0decc-82dd-494d-8d9b-0261346d4bc5",
+                "id": "aca3c1cd-6bfe-4bfe-a968-952c068425a3",
                 "locked": false,
                 "service_code": "LOADING",
-                "service_group_id": "8dbc30c0-8442-4368-a0f5-fb05e36a668c",
-                "start_datetime": "2024-02-05T15:50:47.449395+00:00",
+                "service_group_id": "7685ae7f-8e1a-400d-ac6d-6e0bf9a8f1f9",
+                "start_datetime": "2024-02-06T20:20:04.631399+00:00",
                 "start_timezone": "America/New_York",
                 "total_cost": 10000,
-                "updated_at": "2024-02-05T15:50:47.449394+00:00"
+                "updated_at": "2024-02-06T20:20:04.631398+00:00"
               }
             ],
             "x-examples": [
               [
                 {
-                  "created_at": "2024-02-05T15:50:47.449384+00:00",
-                  "end_datetime": "2024-02-05T15:50:47.449396+00:00",
+                  "created_at": "2024-02-06T20:20:04.631394+00:00",
+                  "end_datetime": "2024-02-06T20:20:04.631400+00:00",
                   "end_timezone": "America/New_York",
                   "estimated_hours": 2.5,
                   "estimated_pricing_strategy": "HOURLY",
                   "estimated_unit_price": 10000,
                   "estimated_workers": 2,
-                  "id": "06f0decc-82dd-494d-8d9b-0261346d4bc5",
+                  "id": "aca3c1cd-6bfe-4bfe-a968-952c068425a3",
                   "locked": false,
                   "service_code": "LOADING",
-                  "service_group_id": "8dbc30c0-8442-4368-a0f5-fb05e36a668c",
-                  "start_datetime": "2024-02-05T15:50:47.449395+00:00",
+                  "service_group_id": "7685ae7f-8e1a-400d-ac6d-6e0bf9a8f1f9",
+                  "start_datetime": "2024-02-06T20:20:04.631399+00:00",
                   "start_timezone": "America/New_York",
                   "total_cost": 10000,
-                  "updated_at": "2024-02-05T15:50:47.449394+00:00"
+                  "updated_at": "2024-02-06T20:20:04.631398+00:00"
                 }
               ]
             ]
@@ -3775,9 +3783,9 @@
             "description": "Service Quote ID",
             "type": "string",
             "format": "uuid",
-            "example": "063aa72b-b818-4cf3-866c-03841252f3cc",
+            "example": "ecb094c3-6bc3-40c9-a8c7-c6658a0bd2ec",
             "x-examples": [
-              "063aa72b-b818-4cf3-866c-03841252f3cc"
+              "ecb094c3-6bc3-40c9-a8c7-c6658a0bd2ec"
             ]
           },
           "created_at": {
@@ -3890,9 +3898,9 @@
             "description": "Service Group ID",
             "type": "string",
             "format": "uuid",
-            "example": "c3a48bae-de16-421f-9f7b-81db92ace33e",
+            "example": "a027a6b9-d26a-4e02-961a-4a0a9185a048",
             "x-examples": [
-              "c3a48bae-de16-421f-9f7b-81db92ace33e"
+              "a027a6b9-d26a-4e02-961a-4a0a9185a048"
             ]
           },
           "service_code": {
@@ -4809,9 +4817,9 @@
             "title": "Id",
             "description": "Location ID",
             "type": "string",
-            "example": "1bcd054ca1bc48a286be06556cabd171",
+            "example": "05604653e9e94902914b233c4d1dc06e",
             "x-examples": [
-              "1bcd054ca1bc48a286be06556cabd171"
+              "05604653e9e94902914b233c4d1dc06e"
             ]
           },
           "property_type": {
@@ -4865,7 +4873,7 @@
           "area": 1000,
           "city": "New York City",
           "country": "US",
-          "id": "53526308aef0431db8c8583191fa6366",
+          "id": "c25ccd58054e4bc4a854324cd7c16c1e",
           "line_1": "123 Main St",
           "line_2": "Apt 1",
           "market_code": "NEW_YORK_NY",
@@ -4879,7 +4887,7 @@
             "area": 1000,
             "city": "New York City",
             "country": "US",
-            "id": "53526308aef0431db8c8583191fa6366",
+            "id": "c25ccd58054e4bc4a854324cd7c16c1e",
             "line_1": "123 Main St",
             "line_2": "Apt 1",
             "market_code": "NEW_YORK_NY",
@@ -4941,13 +4949,25 @@
       }
     },
     "securitySchemes": {
-      "OAuth2ImplicitBearer": {
+      "OAuth2ClientCredentialsBearer": {
         "type": "oauth2",
         "flows": {
-          "implicit": {
+          "clientCredentials": {
+            "refreshUrl": "/authorize",
             "scopes": {
+              "quotes:create": "Create quotes",
+              "quotes:read": "Read quotes",
+              "quotes:update": "Update quotes",
+              "quotes:delete": "Delete quotes",
+              "orders:create": "Create orders",
+              "leads:create": "Create leads",
+              "leads:read": "Read leads",
+              "leads:update": "Update leads",
+              "leads:delete": "Delete leads",
+              "locations:create": "Create locations",
+              "postal-codes:read": "Read postal codes"
             },
-            "authorizationUrl": "/authorize"
+            "tokenUrl": "/authorize"
           }
         }
       }
