# typescript/api/location-api-generated.ts
@@ -58,9 +58,9 @@ export const LocationApiAxiosParamCreator = function (configuration?: Configurat
             const localVarHeaderParameter = configuration && !isBrowser() ? { "User-Agent": configuration.userAgent } : {} as any;
             const localVarQueryParameter = {} as any;
 
-            // authentication OAuth2ImplicitBearer required
+            // authentication OAuth2ClientCredentialsBearer required
             // oauth required
-            await setOAuthToObject(localVarHeaderParameter, "OAuth2ImplicitBearer", [], configuration)
+            await setOAuthToObject(localVarHeaderParameter, "OAuth2ClientCredentialsBearer", ["locations:create"], configuration)
 
     
             localVarHeaderParameter['Content-Type'] = 'application/json';
