# typescript/api/postal-code-api-generated.ts
@@ -55,9 +55,9 @@ export const PostalCodeApiAxiosParamCreator = function (configuration?: Configur
             const localVarHeaderParameter = configuration && !isBrowser() ? { "User-Agent": configuration.userAgent } : {} as any;
             const localVarQueryParameter = {} as any;
 
-            // authentication OAuth2ImplicitBearer required
+            // authentication OAuth2ClientCredentialsBearer required
             // oauth required
-            await setOAuthToObject(localVarHeaderParameter, "OAuth2ImplicitBearer", [], configuration)
+            await setOAuthToObject(localVarHeaderParameter, "OAuth2ClientCredentialsBearer", ["postal-codes:read"], configuration)
             if (originPostalCode !== undefined) {
                 localVarQueryParameter['origin_postal_code'] = originPostalCode;
             }
